objects/DMAPP__AM_Plan_Metric_Score__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>DMAPP__DM_Account_Plan__c</referenceTo>
        <relationshipLabel>AM Plan Metric Scores</relationshipLabel>
        <relationshipName>AM_Plan_Metric_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Annual_Revenue_Target__c</fullName>
        <label>Annual Revenue Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Current_Opportunities_Advice__c</fullName>
        <label>Current Opportunities Advice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Current_Opportunities_Badge__c</fullName>
        <label>Current Opportunities Badge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Current_Opportunities_Score_Amount__c</fullName>
        <label>Current Opportunities Score Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Current_Opportunities_Score__c</fullName>
        <label>Current Opportunities Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Current_Opportunities_Target_Amber__c</fullName>
        <label>Current Opportunities Target Amber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Current_Opportunities_Target_Green__c</fullName>
        <label>Current Opportunities Target Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Current_Opportunity_Multiplier__c</fullName>
        <label>Current Opportunity Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Current_Opps_Total_Last_Modified_Date__c</fullName>
        <label>Current Opps Total Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__Potential_Opportunities_Advice__c</fullName>
        <label>Potential Opportunities Advice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Potential_Opportunities_Badge__c</fullName>
        <label>Potential Opportunities Badge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Potential_Opportunities_Score_Amount__c</fullName>
        <label>Potential Opportunities Score Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Potential_Opportunities_Score__c</fullName>
        <label>Potential Opportunities Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Potential_Opportunities_Target_Amber__c</fullName>
        <label>Potential Opportunities Target Amber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Potential_Opportunities_Target_Green__c</fullName>
        <label>Potential Opportunities Target Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Potential_Opportunity_Multiplier__c</fullName>
        <label>Potential Opportunity Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Potential_Opps_Total_Last_Modified_Date__c</fullName>
        <label>Potential Opps Total Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__Previous_Score__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Score</label>
        <referenceTo>DMAPP__AM_Plan_Metric_Score__c</referenceTo>
        <relationshipLabel>Previous Plan Metric Scores</relationshipLabel>
        <relationshipName>AM_Previous_Plan_Metric_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Segmentation_Score_Advice__c</fullName>
        <label>Segmentation Score Advice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Segmentation_Score_Badge__c</fullName>
        <label>Segmentation Score Badge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Segmentation_Score_Score__c</fullName>
        <label>Segmentation Score Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Segmentation_Score_Target_Amber__c</fullName>
        <label>Segmentation Score Target Amber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Segmentation_Score_Target_Green__c</fullName>
        <label>Segmentation Score Target Green</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Solutions_In_Plan__c</fullName>
        <label>Solutions In Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Contribution_Advice__c</fullName>
        <label>Strategic Contribution Advice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Contribution_Badge__c</fullName>
        <label>Strategic Contribution Badge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Contribution_Score__c</fullName>
        <label>Strategic Contribution Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Contribution_Target_Amber__c</fullName>
        <label>Strategic Contribution Target Amber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Contribution_Target_Green__c</fullName>
        <label>Strategic Contribution Target Green</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Coverage_Advice__c</fullName>
        <label>Strategic Coverage Advice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Coverage_Badge__c</fullName>
        <label>Strategic Coverage Badge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Coverage_Info_Score__c</fullName>
        <label>Strategic Coverage Info Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Coverage_Score__c</fullName>
        <label>Strategic Coverage Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Coverage_Target_Amber__c</fullName>
        <label>Strategic Coverage Target Amber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Coverage_Target_Green__c</fullName>
        <label>Strategic Coverage Target Green</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Penetration_Advice__c</fullName>
        <label>Strategic Penetration Advice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Penetration_Badge__c</fullName>
        <label>Strategic Penetration Badge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Penetration_Score__c</fullName>
        <label>Strategic Penetration Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Penetration_Target_Amber__c</fullName>
        <label>Strategic Penetration Target Amber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Penetration_Target_Green__c</fullName>
        <label>Strategic Penetration Target Green</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Potential_Advice__c</fullName>
        <label>Strategic Potential Advice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Potential_Badge__c</fullName>
        <label>Strategic Potential Badge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Potential_Score__c</fullName>
        <label>Strategic Potential Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Potential_Target_Amber__c</fullName>
        <label>Strategic Potential Target Amber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Potential_Target_Green__c</fullName>
        <label>Strategic Potential Target Green</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Tactical_Coverage_Advice__c</fullName>
        <label>Tactical Coverage Advice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Tactical_Coverage_Badge__c</fullName>
        <label>Tactical Coverage Badge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Tactical_Coverage_Info_Score__c</fullName>
        <label>Tactical Coverage Info Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Tactical_Coverage_Score__c</fullName>
        <label>Tactical Coverage Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Tactical_Coverage_Target_Amber__c</fullName>
        <label>Tactical Coverage Target Amber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Tactical_Coverage_Target_Green__c</fullName>
        <label>Tactical Coverage Target Green</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Target_Revenue_Advice__c</fullName>
        <label>Target Revenue Advice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Target_Revenue_Badge__c</fullName>
        <label>Target Revenue Badge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Target_Revenue_Score_Amount__c</fullName>
        <label>Target Revenue Score Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Target_Revenue_Score__c</fullName>
        <label>Target Revenue Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Target_Revenue_Target_Amber__c</fullName>
        <label>Target Revenue Target Amber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Target_Revenue_Target_Green__c</fullName>
        <label>Target Revenue Target Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Targeted_Solutions_With_Closed_Won__c</fullName>
        <label>Targeted Solutions With Closed Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Targeted_Solutions__c</fullName>
        <label>Targeted Solutions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Targeted_Units__c</fullName>
        <label>Targeted Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Total_A_and_C_Current_Opps__c</fullName>
        <label>Total A and C Current Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Total_Current_Opps_Change__c</fullName>
        <formula>DMAPP__Current_Opportunities_Score_Amount__c - DMAPP__Previous_Score__r.DMAPP__Current_Opportunities_Score_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Current Opps Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Total_Potential_Opps_Change__c</fullName>
        <formula>DMAPP__Potential_Opportunities_Score_Amount__c - DMAPP__Previous_Score__r.DMAPP__Potential_Opportunities_Score_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Potential Opps Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Total_Won_Opps_Change__c</fullName>
        <formula>DMAPP__Target_Revenue_Score_Amount__c - DMAPP__Previous_Score__r.DMAPP__Target_Revenue_Score_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Won Opps Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Contribution_Advice__c</fullName>
        <label>Value Contribution Advice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Contribution_Badge__c</fullName>
        <label>Value Contribution Badge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Contribution_Score__c</fullName>
        <label>Value Contribution Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Contribution_Target_Amber__c</fullName>
        <label>Value Contribution Target Amber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Contribution_Target_Green__c</fullName>
        <label>Value Contribution Target Green</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Current_A_Opps__c</fullName>
        <label>Value Current A Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Targeted_Current_A_Opps__c</fullName>
        <label>Value Targeted Current A Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Targeted_Current_D_Opps__c</fullName>
        <label>Value Targeted Current D Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Targeted_Current_Opps__c</fullName>
        <label>Value Targeted Current Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Targeted_Solutions_Closed_Opps__c</fullName>
        <label>Value Targeted Solutions Closed Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Targeted_Solutions_Current_Opps__c</fullName>
        <label>Value Targeted Solutions Current Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Targeted_Solutions_Potential_Opps__c</fullName>
        <label>Value Targeted Solutions Potential Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Won_Opps_Total_Last_Modified_Date__c</fullName>
        <label>Won Opps Total Last Modified Date</label>
        <type>Date</type>
    </fields>
    <label>AM Plan Metric Score</label>
    <nameField>
        <label>AM Plan Metric Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AM Plan Metric Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>